# study_py

./: README.md  admin.py  expand_problems.py  fill_problem_templates.py  fill_problems.py  generate_problems.py  generate_problems_direct.py  generate_problems_gemini.py  level_test.py  pyproject.toml  requirements.txt  run_apps.bat  run_apps.ps1  run_apps.sh
problems/: 01_출력.json  02_변수와 입력.json  03_연산자.json  04_문자열1.json  05_리스트 1.json  06_선택제어문.json  07_디버깅.json  08_반복제어문 1.json  09_반복제어문 2.json  10_반복제어문 3.json  11_문자열 2.json  12_리스트 2.json  13_리스트 3.json  14_기타 자료형.json  15_함수 1.json  16_함수 2.json  17_함수 3 - 재귀함수.json  18_클래스.json  19_파일입출력.json
results/: 2025-12-24_admin_result.json  2025-12-24_이현고_result.json  2025-12-24_이현구_result.json  2025-12-24_이현규_result.json
